# neural-python-test-task

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
src/: file_processor.py  main.py  main2.py  new_file_processor.py  parsers.py  prompts.py  settings.py  starter.py  ui.py  utils.py
src/processors/: async_graph_file_processor.py  base_llm_file_processor.py  sync_chain_file_processor.py
src/starters/: async_starter.py  sync_starter.py
src/tests/: conftest.py  test_async_graph_file_processor.py  test_sync_chain_file_processor.py
