[tool.poetry]
name = "llm-project"
version = "0.1.0"
description = "Project using LangChain with Python 3.12"
authors = ["Valery Shchuryk <valeryschurik@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"

langchain = "1.0.2"
langchain-community = "0.4.0"
langchain-openai = "*"
openai = "2.6.1"

pydantic = "^2.0"
requests = "^2.31.0"
aiofiles = "^25.1.0"
pytest = "^8.4.2"
setuptools = "^80.9.0"
pytest-asyncio = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
